@@ -28,6 +28,8 @@ Changes in version 0.1.2.3-alpha - 2006-10-??
       like those for circuit events.
     - NS events to inform a controller when our opinion of a router's status
       has changed.
+    - Add a GETINFO events/names and GETINFO features/names so controllers
+      can tell which events and features are supported.
 
   o Security bugfixes:
     - When the user sends a NEWNYM signal, clear the client-side DNS
